# agent-ownership-framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  README.md  ROADMAP.md  action.yml
.github/ISSUE_TEMPLATE/: new-agent-contract.md
.github/workflows/: ci.yml  validate-contracts.yml
ci-cd/: README.md  github-actions-validate.yml  gitlab-ci.yml  terraform-validate.tf
docs/: COMPLIANCE.md  FAQ.md  FRAMEWORK.md  INTEGRATION.md  PRINCIPLES.md  SCHEMA.md  TROUBLESHOOTING.md  aof-ecosystem.md
examples/: README.md  fraud-detection-agent.yaml  internal-tool-agent.yaml  operations-agent.yaml  orchestrator-agent.yaml  retention-sweeper-agent.yaml  risk-analysis-agent.yaml  support-agent.yaml
schema/: README.md
schema/v1/: agent-ownership-contract.example.yaml  agent-ownership-contract.schema.json
templates/: contract-checklist.md  contract-template.yaml  implementation-guide.md  schema-fields-explained.md
tools/: README.md  aof  package-lock.json  package.json  pyproject.toml  setup.py  validate-contract.js  validate-contract.py
tools/aof/: __init__.py  __main__.py  boundaries.py  cli.py  diff.py  exporters.py  validator.py  verify.py
tools/aof/schema/: agent-ownership-contract.schema.json
tools/lib/: validator.js
tools/test/: aof.test.js
tools/tests/: test_aof.py  test_phase3.py
